WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152614
Simple line layout: Text with stroke width is not positioned correctly.
https://bugs.webkit.org/show_bug.cgi?id=152614
Summary
Simple line layout: Text with stroke width is not positioned correctly.
alan
Reported
2015-12-31 09:33:49 PST
ssia.
Attachments
Patch
(3.84 KB, patch)
2015-12-31 09:39 PST
,
alan
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-12-31 09:39:19 PST
Created
attachment 268043
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-12-31 11:19:58 PST
Comment on
attachment 268043
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=268043&action=review
> LayoutTests/fast/text/simple-line-layout-text-position-with-stroke-expected.html:7 > + -webkit-text-stroke-width: 2px;
tabs
> LayoutTests/fast/text/simple-line-layout-text-position-with-stroke-expected.html:12 > + internals.settings.setSimpleLineLayoutEnabled(false);
2-space indent
> LayoutTests/fast/text/simple-line-layout-text-position-with-stroke.html:7 > + -webkit-text-stroke-width: 2px;
Tabs
alan
Comment 3
2015-12-31 11:34:18 PST
Committed
r194462
: <
http://trac.webkit.org/changeset/194462
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug