Simple line layout: Text with stroke width is not positioned correctly. https://bugs.webkit.org/show_bug.cgi?id=152614

Reviewed by Simon Fraser.

Visual overflow should not affect text position.

Source/WebCore:

Test: fast/text/simple-line-layout-text-position-with-stroke.html

* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::paintFlow):

LayoutTests:

* fast/text/simple-line-layout-text-position-with-stroke-expected.html: Added.
* fast/text/simple-line-layout-text-position-with-stroke.html: Added.

Canonical link: https://commits.webkit.org/170700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194462 268f45cc-cd09-0410-ab3c-d52691b4dbfc